# xform

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO
Plasma/: .project  AndroidManifest.xml  build.xml  local.properties
Plasma/jni/: Android.mk  Android_old.mk  Application.mk  boxblur.cpp  build_halide.sh  localLaplacian.cpp  naive.c  plasma.c
UploadToServer/: AndroidManifest.xml  build.xml  local.properties  uploadtoserver.properties  uploadtoserver.xml
UploadToServer/jni/: Android.mk  Application.mk  build_halide.sh  recon.cpp
apps/recipe/: Makefile  extract_recipe.cpp  naive_app  naive_app.cpp  run.py  test.py  test.sh
legacy/: test_ColorSpace.cpp  test_eigen.cpp  test_png.cpp  test_readWrite.cpp
libs/: README
make/: Makefile
socket/: server.py
src/: BilteralFilter.cpp  BilteralFilter.h  CMakeLists.txt  ColorSpace.cpp  ColorSpace.h  ColorTransfer.cpp  Curve.cpp  Curve.h  Filter.cpp  Filter.h  LocalLaplacian.cpp  LocalLaplacian.h  MapImage.cpp  MapImage.h  Pyramid.cpp  Pyramid.h  Recipe.cpp  Recipe.h  SparseGrid.cpp  SparseGrid.h  TransformModel.cpp  TransformModel.h  Warp.cpp  Warp.h  XImage.cpp  XImage.h  color_space.cpp  color_space.h  color_transfer.cpp  color_transfer.h  filter.cpp  filter.h  main.cpp  pyramid.cpp  util.cpp  util.h  warp.cpp  warp.h  x_image.cpp  x_image.h
test/: ColorSpace_unittest.cc  Curve_unittest.cc  Filter_unittest.cc  LocalLaplacian_unittest.cc  MapImage_unittest.cc  Pyramid_unittest.cc  SparseGrid_unittest.cc  TransformModel_unittest.cc  Warp_unittest.cc  XImage_unittest.cc  color_space_unittest.cc  filter_unittest.cc  test_ColorSpace.cpp  test_Filter.cpp  test_readPngToEigen.cpp  test_readWrite.cpp  test_readWritePngToEigen.cpp  util_unittest.cc  warp_unittest.cc  x_image_unittest.cc
util/: util.cpp  util.h
xform_halide/: Makefile  compute_cfeatures.cpp  compute_features.cpp  dequant.cpp  downsample.cpp  halide_recon.cpp  halide_recon_separate.h  highpass.cpp  recon.cpp  recon_separate.cpp  resize.cpp  resize.h  test.cpp  test_compute_cfeatures.cpp  test_compute_features.cpp  test_dequant.cpp  test_downsample.cpp  test_highpass.cpp  test_recon.cpp  test_recon_separate.cpp
xform_halide/tools/: color_transform.h  resize.h  (+1 more)
(+14 files in other folders)
